# RoboShpee

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Notes.md  README.md  build.cue  build.py  dag.py  dagger.json  docker-compose.yaml  flake.nix  justfile  pyproject.toml  start.sh
.github/workflows/: build.yaml  nix.yaml  pr.yaml  publish.yml  test.yaml  test.yml
33bot/: Dockerfile  Exceptions.py  InputValidation.py  commands.py  constants.py  main.py
dagger/: pyproject.toml
dagger/src/: gha.py  main.py
dagger/src/main/: __init__.py
redis/: start.sh
roboshpee/: __init__.py  __main__.py  bot.py  constants.py  events.py  extensions.py  extentions.py  log.py  menu.py  security.py  utils.py
roboshpee/cogs/: demos.py  error_handler.py  mcmap.py  minecraft.py  misc.py  quine.py  roles.py
roboshpee/exts/: antiTaco.py  demos.py  error_handler.py  mcmap.py  misc.py  quine.py  roles.py  test.py  url.py
roboshpee/static/: JustOneMin.webm
src/: __init__.py  __main__.py  commands.py  constants.py  input_validation.py  logic.py  main.rs  roles.rs
src.old/: input_validation.py  logic.py
src.old/bungie/: __init__.py  models.py
src/bungie/: api.py
tests/: conftest.py
tests/cogs/: test_quine.py
tests/test_input_validation/: test_golden_gun_input_val.py
