[package]
name = "roboshpee"
version = "0.1.0"
edition = "2024"

[dependencies]
console-subscriber = "0.4.1"
poise = "0.6.1"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
opentelemetry = "0.29.1"
tracing-opentelemetry = "0.30.0" 
opentelemetry_sdk = { version = "0.29.0", features = ["experimental_async_runtime", "jaeger_remote_sampler", "rt-tokio", "tokio"] }
opentelemetry-otlp = { version = "0.29.0", features = ["tokio"] }
opentelemetry-stdout = "0.29.0"
itertools = "0.14.0"
futures = "0.3.31"
tracing-log = "0.2.0"
log = "0.4.27"

