[project]
name = "RoboShpee"
version = "1.0.0" # TODO: Update to hatch-vcs
description = ""
authors = ["KGB33 <keltonbassingthwaite@gmail.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.1",
    "prettytable>=3.8.0",
    "fuzzywuzzy[speedup]>=0.18.0",
    "requests>=2.31.0",
    "cashews>=6.2.0",
    "charset-normalizer>=3.1.0",
    "gql[aiohttp]>=3.4.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "hypothesis>=6.80.1",
    "pytest-asyncio>=0.21.0",
    "pytest-check>=2.1.5",
    "ruff>=0.0.277",
    "astroid>=2.15.5",
    "identify>=2.5.24",
    "platformdirs>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
select=["E", "F", "I",]
fix=true
